--- a/app/views/calculator.html
+++ b/app/views/calculator.html
@@ -1,14 +1,91 @@
 <div ng-controller="test3App.CalculatorCtrl">
     <h2>My Angular Calculator</h2>
-    <input type="text" id="valA" ng-model="valA" type="number">
-    <button ng-click="add()">+</button>
-    <button ng-click="sub()">-</button>
-    <button ng-click="div()">/</button>
-    <button ng-click="times()">*</button>
-    <button ng-click="clear()">C</button>
-    <ul class="list">
-        <li ng-repeat="value in values" class="item">
-        <div><span>{{value.value}}</span><span>{{value.operation}}</span></div>
-        </li>
-    </ul>
+
+    <div class="row">
+        <div class="col-25">
+            <ul class="list">
+                <li ng-repeat="value in values" class="item">
+                    <div><span>{{value.value}}</span><span>{{value.operation}}</span></div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-75">
+            <div class="row card">
+                <div class="col-100 calc-input item">
+                    <input type="text" id="valA" ng-model="valA" type="number">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25 calc-operation">
+                    <button class="button button-block" ng-click="clear()">AC</button>
+                </div>
+                <div class="col-25 calc-operation">
+                    <button class="button button-block">+/-</button>
+                </div>
+                <div class="col-25 calc-operation">
+                    <button class="button button-block">%</button>
+                </div>
+                <div class="col-25 calc-operation">
+                    <button class="button button-block" ng-click="div()">/</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25 calc-number">
+                    <button class="button button-block">7</button>
+                </div>
+                <div class="col-25 calc-number">
+                    <button class="button button-block">8</button>
+                </div>
+                <div class="col-25 calc-number">
+                    <button class="button button-block">9</button>
+                </div>
+                <div class="col-25 calc-operation">
+                    <button class="button button-block" ng-click="div()">*</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25 calc-number">
+                    <button class="button button-block">4</button>
+                </div>
+                <div class="col-25 calc-number">
+                    <button class="button button-block">5</button>
+                </div>
+                <div class="col-25 calc-number">
+                    <button class="button button-block">6</button>
+                </div>
+                <div class="col-25 calc-operation">
+                    <button class="button button-block" ng-click="sub()">-</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-25 calc-number">
+                    <button class="button  button-block">1</button>
+                </div>
+                <div class="col-25 calc-number">
+                    <button class="button button-block">2</button>
+                </div>
+                <div class="col-25 calc-number">
+                    <button class="button button-block">3</button>
+                </div>
+                <div class="col-25 calc-operation">
+                    <button class="button button-block" ng-click="add()">+</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-50 calc-number">
+                    <button class="button button-block">0</button>
+                </div>
+                <div class="col-25 calc-number">
+                    <button class="button button-block">,</button>
+                </div>
+                <div class="col-25 calc-operation">
+                    <button class="button button-block">=</button>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
 </div>
