--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -77,3 +77,7 @@ body {
     border-bottom: 0;
   }
 }
+
+.calc-input button { background-color: grey; color: lightgrey; margin: 3px; padding: 5px; }
+.calc-operation button { background-color: orange;  margin: 3px; padding: 5px; }
+.calc-number button { background-color: lightgrey;  margin: 3px; padding: 5px; }
