--- a/app/views/basic.html
+++ b/app/views/basic.html
@@ -1,5 +1,11 @@
-<header>Basic</header>
+<ion-view title="Basic">
+    <header>Basic</header>
 
-xx
-xx
-xx
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+
+    <ion-content class="padding">
+        <h2>This is page basic!</h2>
+    </ion-content>
+</ion-view>
