--- a/app/views/scientific.html
+++ b/app/views/scientific.html
@@ -1,5 +1,11 @@
-<header>Scientific</header>
+<ion-view title="Scientific">
+    <header>Scientific</header>
 
-xx
-xx
-xx
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+
+    <ion-content class="padding">
+        <h2>This is page scientific!</h2>
+    </ion-content>
+</ion-view>
