--- a/app/views/wind.html
+++ b/app/views/wind.html
@@ -1,11 +1,11 @@
 <ion-view title="Wind">
-<header>Wolfram</header>
+<header>Wind</header>
 
     <ion-nav-buttons side="left">
         <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
 
     <ion-content class="padding">
-        <h2>This is page two!</h2>
+        <h2>This is page wind!</h2>
     </ion-content>
 </ion-view>
