--- a/app/views/wolfram.html
+++ b/app/views/wolfram.html
@@ -1,5 +1,11 @@
-<header>Wolfram</header>
+<ion-view title="Wolfram">
+    <header>Wolfram</header>
 
-        xx
-        xx
-        xx
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+
+    <ion-content class="padding">
+        <h2>This is page wolfram!</h2>
+    </ion-content>
+</ion-view>
